# sonata-system

./: .gitattributes  .gitignore  .gitmodules  flake.nix  pyproject.toml  python-requirements.txt  sonata.core  sonata_system.core
.github/workflows/: cmake.yml
data/: blocks.yml  pins.yml  pins_sonata.xdc  synth_timing.xdc  top_config.toml  xbar_ifetch.hjson  xbar_ins.hjson  xbar_main.hjson  xbar_main_generated.hjson
doc/guide/: getting-started.md
doc/ip/: pinmux.md
doc/ip/pinmux/: README.md
dv/dpi/spidpi/: spi_flash.cc  spi_flash.hh  spi_lcd.cc  spi_lcd.hh  spi_microsd.cc  spi_microsd.hh  spidevdpi.cc  spidevdpi.hh  spidevdpi.sv
dv/verilator/: sonata_verilator_lint.vlt  top_verilator.sv
rtl/bus/: sonata_xbar_main.sv  tl_ins_pkg.sv  tl_main_pkg.sv  xbar_ifetch.sv  xbar_ins.core  xbar_ins.sv  xbar_main.sv
rtl/fpga/: clkgen_sonata.sv  top_artya7.sv  top_sonata.sv  ws281x_drv.sv
rtl/system/: dm_top.sv  pinmux.sv  pwm_fade.sv  sonata_pkg.sv  sonata_system.sv
rtl/templates/: sonata_xbar_main.sv.tpl
sonata-manual/: sonata-manual.xpr
sw/cheri/: CMakeLists.txt  README.md  cheriot_toolchain.cmake
sw/cheri/common/: platform-pinmux.hh
sw/cheri/error_leds/: error.S
sw/cheri/tests/: test_runner.cc  uart_check.cc
sw/cpp/cheri_error/: README.md  error.S
sw/cpp/error_leds/: error.S
sw/legacy/common/: sonata_system.h  uart.c
sw/legacy/demo/: CMakeLists.txt
sw/legacy/demo/pan_tilt_hat/: CMakeLists.txt  pan_tilt_hat.c
util/: generate_xbar.sh  mem_helper.sh  sonata-openocd-cfg.tcl  top_gen.py  verilator-openocd-cfg.tcl
util/top_gen/: generator.py
(+1 files in other folders)
